--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="blog-background">
 <div class="container">
     <div class="blog-post">
         <h2>{{ post.title }}</h2>
@@ -38,4 +39,5 @@
         });
     });
 </script>
+</div>
 {% endblock %}
