--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="home-background">
 <div class="container">
     <h2>Latest Blogs</h2>
     <div class="blog-list">
@@ -43,4 +44,5 @@
         });
     });
 </script>
+</div>
 {% endblock %}
