--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to the Flask Blog</h1>
+        <h1>Blogs on AI and Data Science</h1>
         <nav>
             <a href="/">Home</a>
         </nav>
